# mockup-support

./: .gitmodules  README.md
Cubesat_Turntable_Motor/cubesat_motor/: cubesat_motor.ino
DemoCode_1/: BMP180.c  BMP180.h  CubesatMain.c  MPU9250.c  MPU9250.h  MPU9250_Definitions.h  TWI2.c  TWI2.h
FinalCode_Arduino/: RF24_ASAT.ino
FinalCode_STM32/: BH1750.c  MPU6050.c  MPU6050.h  TWI.c  main.c
GroundStation/: .cproject  .gitignore  .project  CMakeLists.txt  GroundStation.ioc  STM32L432KCUx_FLASH.ld
GroundStation/Inc/: AX5043.h  SPIDevice.h  UARTMessage.h  at86rf2xx-defaults.hpp  at86rf2xx-registers.hpp  at86rf2xx.hpp  cobs.h  ieee802154.hpp  main.h  mockup.h  mockup.hpp
GroundStation/Src/: AX5043.cpp  SPIDevice.cpp  at86rf2xx-getset.cpp  at86rf2xx-internal.cpp  at86rf2xx.cpp  cobs.c  main.c  mockup.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c
ReceiverArduino/: ReceiverArduino.ino
SerialHandler/: .gitignore  CMakeLists.txt  SCHEMA.sql  imgui_impl_glfw.cpp  imgui_impl_glfw.h  main.cpp  zmq_test_receiver.cpp
SerialHandler/lib/: CMakeLists.txt
SerialHandler/lib/MadgwickAHRS/: MadgwickAHRS.cpp  MadgwickAHRS.h
SerialHandler/lib/cobs/: cobs.h
SerialHandler/lib/mockup/: ECSSObjects.cpp  ECSSObjects.h  Service.cpp
UnityMode/: RotationScript.cs
UnityModel/: Assembly-CSharp.csproj  NetMQ_Test_CSharp  kapos.sln  kapos.userprefs
UnityModel/Assets/: important.unity
UnityModel/Assets/Materials/: Rail Metal.mat  Shelf Blue.mat  Side.mat  Sun Glass.mat  Unknown Black.mat
UnityModel/Assets/Scripts/: RotationScript.cs  RotationScriptWithCalib.cs  RotationScriptWithReCalib.cs
UnityModel/ProjectSettings/: ProjectSettings.asset
